--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="orange_dark">#F68800</color>
+    <color name="orange_light">#E8AD4F</color>
+    <color name="white_opacity">#20FFFFFF</color>
 </resources>
