--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -22,7 +21,7 @@
             android:layout_weight="1"
             android:textSize="20sp"
             android:textColor="@color/white"
-            android:text="@string/vitri" />
+            android:text="@string/location" />
 
         <TextView
             android:id="@+id/textViewDate"
@@ -31,7 +30,7 @@
             android:layout_weight="1"
             android:textSize="20sp"
             android:textColor="@color/white"
-            android:text="@string/ngay"
+            android:text="@string/date"
             android:textAlignment="viewEnd"/>
     </LinearLayout>
 
@@ -43,7 +42,7 @@
             android:id="@+id/imageViewIconWeather"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:contentDescription="nhietdo"
+            android:contentDescription="@string/temperature"
             android:layout_weight="1"
             android:src="@drawable/icon_temp" />
 
@@ -52,7 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="17"
+            android:text="@string/temp_number"
             android:textColor="@color/white"
             android:textSize="100sp"
             android:textStyle="italic" />
@@ -63,13 +62,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="0dp"
-        android:text="@string/temprature"
+        android:text="@string/temperature"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="30sp" />
 
     <LinearLayout
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:layout_width="match_parent"
         android:layout_height="100dp">
 
@@ -84,14 +83,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_weight="1"
-                android:contentDescription="do"
+                android:contentDescription="@string/wind"
                 android:src="@drawable/wind" />
 
             <TextView
                 android:id="@+id/textViewWind"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
-                android:text="wind"
+                android:text="@string/wind"
                 android:textColor="@color/white"
                 android:layout_weight="1"
                 android:textAlignment="center" />
@@ -107,14 +106,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_weight="1"
-                android:contentDescription="do"
+                android:contentDescription="@string/wind"
                 android:src="@drawable/humidity" />
 
             <TextView
                 android:id="@+id/textViewHibility"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
-                android:text="hib"
+                android:text="@string/humidity"
                 android:textColor="@color/white"
                 android:layout_weight="1"
                 android:textAlignment="center" />
@@ -130,14 +129,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_weight="1"
-                android:contentDescription="do"
+                android:contentDescription="@string/cloud"
                 android:src="@drawable/cloud" />
 
             <TextView
                 android:id="@+id/textViewCloud"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
-                android:text="cloud"
+                android:text="@string/cloud"
                 android:textColor="@color/white"
                 android:layout_weight="1"
                 android:textAlignment="center" />
@@ -145,6 +144,7 @@
     </LinearLayout>
 
     <TextView
+        android:layout_marginTop="20dp"
         android:id="@+id/textView10"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -153,7 +153,9 @@
         android:textColor="@color/white"
         android:textAlignment="center"/>
 
-    <androidx.recyclerview.widget.RecyclerView
+    <ListView
+        android:layout_marginTop="10dp"
+        android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white_opacity" />
